# floodingnaque

./: .editorconfig  .eslintcache  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  compose.development.yaml  compose.microservices.yaml  compose.mlflow.yaml  compose.observability.yaml  compose.production.yaml  compose.staging.yaml  compose.yaml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  labeler.yml
.github/agents/: Plan.agent.md  devops.agent.md  floodingnaque.agent.md  ml.agent.md
.github/instructions/: instructions.md
.github/workflows/: automations.yml  ci.yml  cron-jobs.yml  dependabot-automerge.yml  dependabot-override.yml  deploy.yml  frontend-ci.yml  frontend-deploy.yml  performance.yml  pr-automerge.yml  pr-manager.yml  promote-production.yml  release.yml  reusable-python-setup.yml  rollback.yml  security-scan.yml  train.yml
backend/: .coveragerc  .dockerignore  .env.example  .flake8  Dockerfile  Procfile  README.md  entrypoint.sh  gunicorn.conf.py  main.py  mypy.ini  pytest.ini  requirements-dev.txt  requirements-prod.txt  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py
backend/certs/: README.md
backend/config/: development.yaml  feature_flags.development.yaml  feature_flags.production.yaml  feature_flags.py  feature_flags.staging.yaml  feature_flags.yaml  production.yaml  schema.py  staging.yaml  training_config.yaml
backend/data/: SCHEMA.md  reorganization_manifest.json
backend/docs/: BACKUP_RESTORE_RUNBOOK.md  CENTRALIZED_DOCUMENTATION.md
backend/models/: PROGRESSIVE_TRAINING_GUIDE.md  flood_lstm_model.pt  flood_model_v1.sha256  flood_model_v2.sha256  flood_model_v3.sha256  flood_model_v4.sha256  flood_model_v5.sha256  flood_model_v6.sha256  flood_rf_model.sha256  flood_transformer_model.pt  run_training_pipeline.ps1  run_training_pipeline.sh
backend/scripts/: __main__.py  backup_database.sh  backup_database_py.py  calibrate_risk_thresholds.py  clean_raw_flood_records.py  compare_progressive_models.py  evaluate_model.py  evaluate_unified.py  generate_performance_graphs.py  generate_thesis_report.py  generate_thesis_tables.py  ingest_training_data.py  preprocess_official_flood_records.py  (+12 more)
docs/: COMPOSE_HIERARCHY.md  DASHBOARD_STRUCTURE.md  DATA_PROVENANCE.md  DEPLOYMENT_RUNBOOK.md  DOCKER_GUIDE.md  DOCKER_SECRETS_SETUP.md  FLOODINGNAQUE_THESIS_PAPER.md  GGSHIELD_SETUP.md  INCIDENT_RESPONSE.md  MICROSERVICES_ARCHITECTURE.md  MONITORING_SETUP.md  Plan.agent.md  SCALING_GUIDE.md  TLS_SETUP.md
frontend/: .dockerignore  .env.example  .gitignore  .lighthouserc.json  .size-limit.js  .vercelignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  README.md  eslint.config.js  index.html  lighthouse-budget.json  middleware.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.app.json  vercel.json  vite.config.ts  vitest.config.ts
monitoring/: prometheus.yml
nginx/: Dockerfile  docker-entrypoint.sh  floodingnaque.conf  microservices.conf
pgbouncer/: Dockerfile  entrypoint.sh  pgbouncer.ini
scripts/: canary_deploy.sh  extract_boundaries.py  fetch_boundaries.py  find_correct_relations.py  gen_final_polygons.py  gen_ts_output.py  paranaque_boundaries_raw.json  paranaque_final_polygons.json  paranaque_polygons_simplified.json  paranaque_ts_output.txt  run-mypy.ps1  verify_boundaries.py
(+879 files in other folders)
