# Floodingnaque Project Configuration
# This file provides configuration for various Python tools

[project]
name = "floodingnaque"
version = "0.2.0"
description = "Flood prediction and monitoring system for Paranaque"
requires-python = ">=3.12"

[tool.bandit]
# Security linting configuration
exclude_dirs = ["tests", "backend/tests", "venv", "backend/venv", ".venv"]
skips = ["B101", "B104", "B311"]  # Skip assert warnings, hardcoded bindings, random for non-crypto

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | __pycache__
  | alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".git", "__pycache__", "venv", ".venv", "alembic/versions"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (require running server)",
    "security: Security-focused tests",
    "load: Load/performance tests (require locust)",
    "model: ML model-specific tests",
    "slow: Tests that take longer to run",
    "edge_cases: Edge case and boundary testing",
    "property: Property-based tests using Hypothesis",
    "contract: Contract tests for API compatibility",
    "snapshot: Snapshot tests for regression detection (using syrupy)",
    "api_versioning: API versioning compatibility tests",
    "negative: Negative path tests (failures, errors, edge cases)",
    "performance: Performance and benchmark tests",
    "benchmark: Performance benchmark tests",
    "network: Network failure simulation tests",
    "timeout: Timeout handling tests",
    "rate_limit: Rate limiting tests",
    "asyncio: Async/await tests",
    "no_health_mock: Skip automatic health check mocking",
]

# Syrupy snapshot settings
# To update snapshots after intentional changes:
#   cd backend && pytest tests/snapshots/ --snapshot-update -v
